--- a/recipe_and_meal_plan_app/pubspec.yaml
+++ b/recipe_and_meal_plan_app/pubspec.yaml
@@ -30,13 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_calendar_week: ^3.0.2
   intl: ^0.18.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
