--- a/recipe_and_meal_plan_app/pubspec.yaml
+++ b/recipe_and_meal_plan_app/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_calendar_week: ^3.0.2
   intl: ^0.18.1
+  drift: ^2.18.0
+  sqlite3_flutter_libs: ^0.5.0
+  path_provider: ^2.0.0
+  path: ^1.9.0
+  
 
 dev_dependencies:
   flutter_test:
@@ -47,7 +52,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
+  drift_dev: ^2.18.0
+  build_runner: ^2.4.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,8 +69,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - icons/
-  #   - images/a_dot_ham.jpeg
+    - icons/
+    - assets/recipes.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
