--- a/recipe_and_meal_plan_app/pubspec.yaml
+++ b/recipe_and_meal_plan_app/pubspec.yaml
@@ -66,7 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - icons/
-    - assets/recipe_data.json
+    - assets/formatted_recipe_data.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
