--- a/recipe_and_meal_plan_app/pubspec.yaml
+++ b/recipe_and_meal_plan_app/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   intl: ^0.18.1
   google_fonts: ^6.2.1
   provider: ^6.1.2
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -50,8 +53,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
-  drift_dev: ^2.18.0
-  build_runner: ^2.4.9
+  build_runner: ^2.2.0
+  isar_generator: ^3.1.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
